--- a/EdiListFX/src/de/vbl/im/view/Ansprechpartner.fxml
+++ b/EdiListFX/src/de/vbl/im/view/Ansprechpartner.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="kontaktPerson" maxHeight="1.7976931348623157E308" prefHeight="550.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.im.controller.KontaktPersonController">
+<AnchorPane fx:id="ansprechpartner" maxHeight="1.7976931348623157E308" prefHeight="550.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.im.controller.AnsprechpartnerController">
 	<children>
 <VBox maxHeight="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 <children>
@@ -23,7 +23,7 @@
   			<items>
 <AnchorPane maxHeight="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="300.0">
 <children>
-<TitledPane animated="false" collapsible="false" prefHeight="267.0" prefWidth="933.0" text="Daten zur Kontakt-Person" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<TitledPane animated="false" collapsible="false" prefHeight="267.0" prefWidth="933.0" text="Details" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 <content>
     			<AnchorPane maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
                                  <children>
@@ -85,7 +85,7 @@
 </AnchorPane>
 <AnchorPane minHeight="0.0" minWidth="0.0">
 <children>
-                  <TitledPane animated="false" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="933.0" text="Diese Kontakt-Person ist eingetragen bei folgenden Komponenten/Systemen/Partner:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TitledPane animated="false" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="933.0" text="Verwendungsnachweis" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <content>
                               <TableView fx:id="tvKomponenten" minHeight="0.0" minWidth="0.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                                  <columns>
