--- a/EdiListFX/src/de/vbl/im/view/Konfiguration.fxml
+++ b/EdiListFX/src/de/vbl/im/view/Konfiguration.fxml
@@ -22,7 +22,12 @@
 									<children>
 										<TextField fx:id="tfBezeichnung" layoutX="86.0" layoutY="11.0" prefHeight="25.0" prefWidth="200.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="5.0" />
 										<Label layoutX="8.0" layoutY="15.0" prefWidth="81.0" text="Bezeichnung:" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="5.0" />
-										<Label layoutX="319.0" layoutY="15.0" text="Beschreibung:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="5.0" /><ListView fx:id="lvAnsprechpartner" disable="true" prefWidth="200.0" visible="false" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="40.0" /><TextArea fx:id="taBeschreibung" layoutX="89.0" layoutY="58.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" /><Label alignment="CENTER" disable="true" layoutX="6.0" layoutY="64.0" text="Kontaktperson:" visible="false" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="40.0" /><Button fx:id="aaaa" disable="true" layoutX="14.0" layoutY="74.0" mnemonicParsing="false" prefWidth="80.0" text="hinzufügen" visible="false" AnchorPane.leftAnchor="14.0" /><Button disable="true" layoutX="14.0" layoutY="108.0" mnemonicParsing="false" prefWidth="80.0" text="entfernen" visible="false" AnchorPane.leftAnchor="14.0" />
+										<Label layoutX="319.0" layoutY="15.0" text="Beschreibung:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="5.0" />
+										<ListView fx:id="lvAnsprechpartner" disable="true" prefWidth="200.0" visible="false" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="40.0" />
+										<TextArea fx:id="taBeschreibung" layoutX="89.0" layoutY="58.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+										<Label alignment="CENTER" disable="true" layoutX="6.0" layoutY="64.0" text="Ansprechpartner:" visible="false" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="40.0" />
+										<Button fx:id="aaaa" disable="true" layoutX="14.0" layoutY="74.0" mnemonicParsing="false" prefWidth="80.0" text="hinzufügen" visible="false" AnchorPane.leftAnchor="14.0" />
+										<Button disable="true" layoutX="14.0" layoutY="108.0" mnemonicParsing="false" prefWidth="80.0" text="entfernen" visible="false" AnchorPane.leftAnchor="14.0" />
 									</children>
 								</AnchorPane>
 							</content>
